# HomeWork

./: .gitignore  README.md
3 - Basic programming/02/02_1/: main.cpp
3 - Basic programming/03/03_1/: main.cpp
3 - Basic programming/05/05_2/: main.cpp
3 - Basic programming/06/06_1/: main.cpp
3 - Basic programming/06/06_2/: counter.cpp  main.cpp
3 - Basic programming/06/06_3/: Figure.cpp  Quadrangle.cpp  Rhombus.cpp  RightAngledQuadrangle.cpp  Square.cpp  Triangle.cpp  Triangle.h
3 - Basic programming/08/08_2/: IsoscelesTriangle.cpp  IsoscelesTriangle.h  Quadrangle.cpp  RightAngledQuadrangle.cpp  RightAngledTriangle.cpp  Square.cpp  Square.h
3 - Basic programming/09/09_1/: main.cpp
3 - Basic programming/10/10_1/: CMakeLists.txt  my_first_cmake_program
3 - Basic programming/10/10_2/: CMakeLists.txt  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  RightAngledTriangle.h  main.cpp  my_second_cmake_program
3 - Basic programming/11/11_1/: CMakeLists.txt  main.cpp
3 - Basic programming/11/11_1/Greeter/: Greeter.cpp  Greeter.h
3 - Basic programming/Racing/: CMakeLists.txt
3 - Basic programming/Racing/lib/include/: air_vehicle.h  ground_vehicle.h  racing.h  vehicle.h
3 - Basic programming/Racing/lib/src/: air_vehicle.cpp  ground_vehicle.cpp
3 - Basic programming/Racing_simulator/: CMakeLists.txt  main.cpp
4 - Algorithms and data structures/1/1_1/: answer.txt
4 - Algorithms and data structures/1/1_2/: main.cpp
4 - Algorithms and data structures/2/2_1/: main.cpp
4 - Algorithms and data structures/2/2_2/: main.cpp
4 - Algorithms and data structures/3/3_1/: main.cpp
4 - Algorithms and data structures/3/3_2/: main.cpp
4 - Algorithms and data structures/3/3_3/: main.cpp
4 - Algorithms and data structures/4/4_1/: main.cpp
4 - Algorithms and data structures/4/4_2/: main.cpp
4 - Algorithms and data structures/5/5_1/: main.cpp
4 - Algorithms and data structures/5/5_2/: main.cpp
5 - Advanced programming/03/3_1/: CMakeLists.txt  main.cpp
5 - Advanced programming/03/3_1/include/: SmartArray.h
5 - Advanced programming/03/3_1/src/: SmartArray.cpp
5 - Advanced programming/03/3_2/: main.cpp
5 - Advanced programming/04/4_1/: CMakeLists.txt  main.cpp
5 - Advanced programming/04/4_2/: main.cpp
5 - Advanced programming/05/5_1/: main.cpp
5 - Advanced programming/05/5_2/: main.cpp
5 - Advanced programming/05/5_3/: main.cpp
5 - Advanced programming/06/6_1/: main.cpp
5 - Advanced programming/07/6_2/: CMakeLists.txt  main.cpp
5 - Advanced programming/07/7_1/: main.cpp
5 - Advanced programming/07/7_2/: main.cpp
5 - Advanced programming/10/10_1/: main.cpp
5 - Advanced programming/10/10_2/: main.cpp
6 - SQL/02/2_2/: music.sql
6 - SQL/04/: Inserts.sql  creates.sql  selects.sql
6 - SQL/05/: CMakeLists.txt  main.cpp  test_query.sql
6 - SQL/05/Users/include/: Users.h
6 - SQL/05/Users/src/: Users.cpp
7 - Multithreading/01/1_1/: CMakeLists.txt  main.cpp
7 - Multithreading/01/1_2/: main.cpp
7 - Multithreading/02/2_1/: main.cpp
7 - Multithreading/02/2_2/: main.cpp
7 - Multithreading/02/2_3/: main.cpp
7 - Multithreading/03/3_2/: main.cpp
7 - Multithreading/05/5_1/: main.cpp
7 - Multithreading/Thread Pool/: main.cpp
7 - Multithreading/Thread Pool/include/: SafeQueue.h  ThreadPool.h
7 - Multithreading/Thread Pool/src/: SafeQueue.cpp  ThreadPool.cpp
8 - Design patterns/01/: main.cpp
8 - Design patterns/01/1_1/: CMakeLists.txt
8 - Design patterns/01/include/: SqlSelectQuery.h  SqlSelectQueryBuilder.h
8 - Design patterns/01/src/: SqlSelectQueryBuilder.cpp
8 - Design patterns/02/2_1/: main  main.cpp
8 - Design patterns/02/2_2/: main.cpp
8 - Design patterns/04/: main.cpp  Нарушения.txt
Files/: HW12_files.cpp
Live/: Live.cpp
Third_BasicProgramming/02/02_2/: main.cpp
Third_BasicProgramming/02/02_3/: main.cpp
Third_BasicProgramming/03/: main.cpp
Third_BasicProgramming/03/03_2/: main.cpp
Third_BasicProgramming/04/04_1/: main.cpp
Third_BasicProgramming/04/04_2/: main.cpp
Third_BasicProgramming/05/05_1/: main.cpp
Third_BasicProgramming/05/05_3/: main.cpp
Third_BasicProgramming/06/06_1/: math_fun.cpp  math_fun.h
Third_BasicProgramming/06/06_2/: counter.h
Third_BasicProgramming/06/06_3/: EquilateralTriangle.cpp  Figure.h  Rhombus.h  RightAngledQuadrangle.h  RightAngledTriangle.cpp  Square.h
Third_BasicProgramming/07/07_1/: main.cpp
Third_BasicProgramming/07/07_2/: main.cpp
Third_BasicProgramming/08/08_1/: main.cpp
Third_BasicProgramming/08/08_2/: ConstructorError.cpp  ConstructorError.h  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.cpp  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rhombus.cpp  Rhombus.h  RightAngledQuadrangle.cpp  RightAngledQuadrangle.h  RightAngledTriangle.cpp  RightAngledTriangle.h  Square.cpp  Triangle.cpp  main.cpp
Third_BasicProgramming/09/09_1/: main.cpp
Third_BasicProgramming/09/09_2/: main.cpp
Third_BasicProgramming/10/10_1/: CMakeCache.txt  Makefile  (+2 more)
Third_BasicProgramming/11/11_2/: CMakeLists.txt  main.cpp
Third_BasicProgramming/11/11_2/Leaver/: Leaver.h
Third_BasicProgramming/12/12_1/: CMakeLists.txt  main.cpp  manual_test.h  my_second_cmake_program
(+21 files in other folders)
